--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <DOCTYPE html>
     <html lang="en">
-    <style type="text/css">
-    </style>
+    <head>
+        <meta name= "viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" hhref= "C:\Users\nahoi\Pictures\Saved Pictures\Calypso-Work\style.css"> 
+    </head>
+
 
     <div class= "grid">
         <header class= "header demo">Calypso Ave</header>
