--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <html lang="en">
     <head>
         <meta name= "viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" hhref= "C:\Users\nahoi\Pictures\Saved Pictures\Calypso-Work\style.css"> 
+        <link rel="stylesheet" href="style.css">
     </head>
 
 
