--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 
     <div class= "grid">
         <header class= "header demo">Calypso Ave</header>
-        <aside class= "demo1">Picture</aside>
         <aside class= "demo2">Yarel Fernandez Negron,<br>Creator and founder of<br>Calypso Ave. Here we will<br>found  some Care Tips<br>for you to make your<br>jewelry last and some<br>Calypso's Latest Work.</aside>
         </div>
+    <div class= "demo1">
+        <img src= "img_main page img.jpeg">
+    </div>
+        
     
