--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <aside class= "demo2">Yarel Fernandez Negron,<br>Creator and founder of<br>Calypso Ave. Here we will<br>found  some Care Tips<br>for you to make your<br>jewelry last and some<br>Calypso's Latest Work.</aside>
         </div>
     <div class= "demo1">
-        <img src= "img_main page img.jpeg">
+        <img src= "main page img.jpeg">
     </div>
         
     
