--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         </div>
     <div class= "demo1">
         <img src= "main page img.jpeg">
+        <i class="fab fa-instagram"></i>
+        <a href= "url">https://instagram.com/calypso.ave?igshid=1fzt3tgh25afn</a>
     </div>
         
     
