--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
     <div class= "grid">
         <header class= "header demo">Calypso Ave</header>
         <aside class= "demo2">Yarel Fernandez Negron,<br>Creator and founder of<br>Calypso Ave. Here we will<br>found  some Care Tips<br>for you to make your<br>jewelry last and some<br>Calypso's Latest Work.</aside>
-        </div>
-    <div class= "demo1">
-        <img src= "main page img.jpeg">
+        <a href= "url">"https://instagram.com/calypso.ave?igshid=1fzt3tgh25afn"> Visit our Instagram</a>
+        <aside class= "demo1"><img src= "main page img.jpeg"></aside>
         <i class="fab fa-instagram"></i>
-        <a href= "url">https://instagram.com/calypso.ave?igshid=1fzt3tgh25afn</a>
     </div>
         
-    
+   
