--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <div class= "grid">
         <header class= "header demo">Calypso Ave</header>
         <aside class= "demo2">Yarel Fernandez Negron,<br>Creator and founder of<br>Calypso Ave. Here we will<br>found  some Care Tips<br>for you to make your<br>jewelry last and some<br>Calypso's Latest Work.</aside>
-        <a href= "url">https://instagram.com/calypso.ave?igshid=1fzt3tgh25afn>Visit our Instagram</a>
         <img src= "main page img.jpeg"></img>
         <aside class= "demo1"></aside> 
         <i class="fab fa-instagram"></i>
     </div>
+    <footer>
+        <a href= "url>https://instagram.com/calypso.ave?igshid=1fzt3tgh25afn">Visit our Instagram</a>
+    </footer>
         
    
