--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <div class= "grid">
         <header class= "header demo">Calypso Ave</header>
-        <aside class= "demo2">Yarel Fernandez Negron,<br>Creator and founder of<br>Calypso Ave. Here we will<br>found  some Care Tips<br>for you to make your<br>jewelry last and some<br>Calypso's Latest Work.</aside>
+        <aside class= "demo2">Yarel Fernandez Negron,<br>creator and founder of<br>Calypso Ave. Here we will<br>found  some care tips<br>for you to make your<br>jewelry last and some<br>Calypso's latest work.</aside>
         <img src= "main page img.jpeg"></img>
         <aside class= "demo1"></aside> 
         <i class="fab fa-instagram"></i>
