--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
         <img src= "main page img.jpeg"></img>
         <aside class= "demo1"></aside> 
         <i class="fab fa-instagram"></i>
+        <footer>
+            <a href= "url>https://instagram.com/calypso.ave?igshid=1fzt3tgh25afn">Visit our Instagram</a>
+        </footer>
     </div>
-    <footer>
-        <a href= "url>https://instagram.com/calypso.ave?igshid=1fzt3tgh25afn">Visit our Instagram</a>
-    </footer>
+    </html>
         
    
