--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                         for you to make your<br>
                         jewelry last and some<br>
                         Calypso's latest work.</p>
-        <img src= "main page img.jpeg"></img>
+        <img src= "main page img.jpeg" style= width:400px;height:400px></img>
         <aside class= "demo1"></aside> 
         <i class="fab fa-instagram"></i>
         <footer>
