--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
                         for you to make your<br>
                         jewelry last and some<br>
                         Calypso's latest work.</p>
-        <img src= "main page img.jpeg" style= width:450px;height:450px></img>
         <aside class= "demo1"></aside> 
         <i class="fab fa-instagram"></i>
         <footer>
             <a href= "url>https://instagram.com/calypso.ave?igshid=1fzt3tgh25afn">Visit our Instagram</a>
         </footer>
     </div>
+    <div class="row">
+        <div class="column">
+            <img src= "main page img.jpeg" style= width:450px;height:450px></img>
+        </div>
     </html>
         
    
