--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
                         jewelry last and some<br>
                         Calypso's latest work.</p>
         <aside class= "demo1"></aside> 
-        <i class="fab fa-instagram"></i>
+        <i class="fab fa-instagram"style= "font-size:36"></i>
+        </div>
         <footer>
             <a href= "url>https://instagram.com/calypso.ave?igshid=1fzt3tgh25afn">Visit our Instagram</a>
         </footer>
