--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class= "grid">
         <header class= "header demo">Calypso Ave</header>
         <aside class= "demo1"></aside> 
-        <p class= "demo2">Yarel Fernandez Negron, <br>
+        <p class= "demo2">Yarel Fernández Negrón,<br>
                         creator and founder of<br>
                         Calypso Ave. Here we will<br>
                         found  some care tips<br>
