--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 
 
     <div class= "grid">
-        <header class= "header demo">Calypso Ave</header>
-        <aside class= "demo1"></aside> 
-        <p class= "demo2">Yarel Fernández Negrón,<br>
+        <div class= "header demo">Calypso Ave></div>
+        <div class= "demo1"></div> 
+        <div class= "demo2">Yarel Fernández Negrón,<br>
                         creator and founder of<br>
                         Calypso Ave. Here we will<br>
                         found  some care tips<br>
                         for you to make your<br>
                         jewelry last and some<br>
-                        Calypso's latest work.</p>
+                        Calypso's latest work.</div>
         </div>
         </html>
         
