--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 
     <div class= "grid">
-        <div class= "header demo">Calypso Ave></div>
+        <header class= "header demo">Calypso Ave></header>
         <div class= "demo1"></div> 
         <div class= "demo2">Yarel Fernández Negrón,<br>
                         creator and founder of<br>
