--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <link rel="stylesheet" href="style.css">
     </head>
 
+    <nav class= "Calypso ave">
+        <a href="index..html">Gallery</a>
+    </nav>
 
     <div class= "grid">
         <header class= "header demo">Calypso Ave</header>
