--- a/index..html
+++ b/index..html
@@ -7,14 +7,8 @@
 
     <div class= "Grid">
         <header class= "header demo">Calypso Ave latest work</header>
-        <h1 class= h1></h1>
-        <h2 class= h2></h2>
-        <h3 class= h3></h3>
-        <h4 class= h4></h4>
-        <h5 class= h5></h5>
-        <h6 class= h6></h6>
-        <h7 class= h7></h7>
-        <h8 class= h8></h8>
-        <h9 class= h9></h9>
+        <element class= "img1"></element>
+            <img src="picture1.jpeg" style= width:min-content;></img>
+       
 
     </div>
