--- a/index..html
+++ b/index..html
@@ -9,6 +9,21 @@
         <header class= "header demo">Calypso Ave latest work</header>
         <element class= "img1"></element>
             <img src="picture1.jpeg" style= width:200px;height:220px></img>
-       
+        <element class= "img2"></element>
+            <img src="picture2.jpeg" style= width:200;height:220px></img>
+        <element class= "img3"></element>
+            <img src="picture3.jpeg" style= width:200;height:220px></img>
+        <element class= "img4"></element>
+            <img src="picture4.jpeg" style= width:200;height:220px></img>
+        <element class= "img5"></element>
+            <img src= "picture5.jpeg" style= width:200;height:220px></img>
+        <element class= "img6"></element>
+            <img src= "picture6.jpeg" style= width:200;height:220px></img>
+        <element class= "img7"></element>
+            <img src= "picture7.jpeg" style= width:200;height:220px></img>
+        <element class= "img8"></element>
+            <img src= "picture8.jpeg" style= width:200;height:220px></img>
+        <element class= "img9"></element>
+            <img src="picture9.jpeg" style= width:200;height:220px></img>
 
     </div>
