--- a/index..html
+++ b/index..html
@@ -9,9 +9,9 @@
         <header class= "header demo">Calypso Ave latest work</header>
         <element class= "img1"></element>
             <img src="picture1.jpeg" style= width:200px;height:220px></img>
-            <div class="overlay">Mala beads, specially made with <br>
+            <h1>Mala beads, specially made with <br>
                                 rose quartz accents for self-<br>
-                                love meditation</div>
+                                love meditation</h1>
         <element class= "img2"></element>
             <img src="picture2.jpeg" style= width:200;height:220px></img>
         <element class= "img3"></element>
