--- a/index..html
+++ b/index..html
@@ -5,28 +5,61 @@
         <link rel="stylesheet" href="style.css">
     </head>
 
-    <div class= "Grid">
+    <div class= "slideshow-container">
         <header class= "header demo">Calypso Ave latest work</header>
-        <element class= "img1"></element>
-            <img src="picture1.jpeg" style= width:200px;height:220px></img>
-            <h1>Mala beads, specially made with <br>
-                                rose quartz accents for self-<br>
-                                love meditation</h1>
-        <element class= "img2"></element>
-            <img src="picture2.jpeg" style= width:200;height:220px></img>
-        <element class= "img3"></element>
-            <img src="picture3.jpeg" style= width:200;height:220px></img>
-        <element class= "img4"></element>
-            <img src="picture4.jpeg" style= width:200;height:220px></img>
-        <element class= "img5"></element>
-            <img src= "picture5.jpeg" style= width:200;height:220px></img>
-        <element class= "img6"></element>
-            <img src= "picture6.jpeg" style= width:200;height:220px></img>
-        <element class= "img7"></element>
-            <img src= "picture7.jpeg" style= width:200;height:220px></img>
-        <element class= "img8"></element>
-            <img src= "picture8.jpeg" style= width:200;height:220px></img>
-        <element class= "img9"></element>
-            <img src="picture9.jpeg" style= width:200;height:220px></img>
+
+        <div class="mySlides fade">
+            <div class="numbertext">1 / 9</div>
+            <img src="picture1.jpeg" style= width:100%>
+            <div class="text">Made with opalite, citrine amethyst and clear quartz.<br> 
+                Powerful citrine and calming amethyst, perfect combination to enhance<br>
+                your inner shine.</div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">2 / 9</div>
+            <img src="picture2.jpeg" style= width:100%>
+            <div class="text">Amethyst and orange Jade made the perfect combination<br>
+                            for beauty and tranquility.</div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">3 / 9</div>
+            <img src="picture3.jpeg" style= width:100%>
+            <div class= "text">All seeing eye, these protection earing's are made with<br>
+                fluorite, citrine and lapis lazuli.</div>
+                
+        <div class="mySlides fade">
+            <div class="numbertext">4 / 9</div>
+            <img src="picture4.jpeg" style= width:100%>
+            <div class=" text">Mala Beads, specifically made with rose quartz accents<br>
+                                 for self-love meditation.</div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">5 / 9</div>
+            <img src= "picture5.jpeg" style= width:100%>
+            <div class=" text">Elastic bracelet made with mahogany obsidian quartz,<br>
+                jade and love. The elephant is a symbol of wisdom and good luck.</div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">6 / 9</div>
+            <img src= "picture6.jpeg" style= width:100%>
+            <div class= "text">Elastic bracelet made with agate quartz, jade and love.<br>
+                The elephant is a symbol of wisdom and good luck.</div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">7/ 9</div>
+            <img src= "picture7.jpeg" style= width:100%>
+            <div class= "text">Made with carnelian, agate, ruby zoisite, tiger eye and jade.</div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">8 / 9</div>
+            <img src= "picture8.jpeg" style= width:100%>
+            <div class= "text">These are inspired in the sensation that bring<br>
+                us the beach and his magic. Are made with coral and moonstone.</div>
+  
+        <div class="mySlides fade">
+            <div class="numbertext">9 / 9</div>
+            <img src="picture9.jpeg" style= width:100%>
+            <div class= "text">These are inspired in a genie bottle. Made with<br> 
+                ruby zoisite, agate and fluorite.</div>
 
     </div>
