--- a/home page.html
+++ b/home page.html
@@ -6,7 +6,8 @@
     </head>
 
     <nav class= "Calypso ave">
-        <a href="index..html">Gallery</a>
+        <a href="Gallery page.html">Gallery</a>
+        <a href="About page.html">About</a>
     </nav>
 
     <div class= "grid">
@@ -22,4 +23,3 @@
         </div>
         </html>
         
-   
