--- a/Gallery page.html
+++ b/Gallery page.html
@@ -3,6 +3,10 @@
     <head>
         <meta name= "viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="Gallery page.css">
+    
+        <nav class= "Calypso ave"></nav>
+        <a href="home page.html">Back</a>
+        </head>
 
     <div class="grid"></div>
         <header class= "header demo">Calypso Ave latest works</header>
@@ -64,7 +68,7 @@
             </div>
             
             <div class=".img9"></div>
-                     <img src="picture9.jpeg" style="width:500px;height:540px">
+                     <img src="picture9.jpeg" style="width:500px;height:450px">
                     <h3>Beautiful Quartz earings</h3>
                     <p>These are inspired in a genie bottle. Made with<br> 
                         ruby zoisite, agate and fluorite.</p>
