--- a/home page.html
+++ b/home page.html
@@ -8,11 +8,14 @@
     <nav class= "Calypso ave">
         <a href="Gallery page.html">Gallery</a>
         <a href="About page.html">About</a>
+        <a href="Make it last.html">Make it last</a>
     </nav>
 
     <div class= "grid">
         <header class= "header demo">Calypso Ave</header>
-        <div class= "demo1"></div> 
+        <div class= "demo1">
+            <img src="main page img.jpeg"style="width=250px;height=100px"></div>
+        </div> 
         <div class= "demo2">Yarel Fernández Negrón,<br>
                         creator and founder of<br>
                         Calypso Ave. Here we will<br>
