--- a/home page.html
+++ b/home page.html
@@ -14,7 +14,7 @@
     <div class= "grid">
         <header class= "header demo">Calypso Ave</header>
         <div class= "demo1">
-            <img src="main page img.jpeg"style="width=250px;height=100px"></div>
+            <img src="main page img1.jpg"style="width=250px;height=100px"></div>
         </div> 
         <div class= "demo2">Yarel Fernández Negrón,<br>
                         creator and founder of<br>
