--- a/About page.html
+++ b/About page.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="About page.css">
     
         <nav class= "Calypso ave"></nav>
-        <a href="home page.html">Back</a>
+        <a href="index.html">Back</a>
         </head>
 
 <div class="grid">
