--- a/Make it last.html
+++ b/Make it last.html
@@ -4,7 +4,7 @@
         <meta name= "viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="Make it last.css">
         <nav class= "Calypso ave"></nav>
-        <a href="home page.html">Back</a>
+        <a href="index.html">Back</a>
         
     </head>
 
