--- a/Gallery page.html
+++ b/Gallery page.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="Gallery page.css">
     
         <nav class= "Calypso ave"></nav>
-        <a href="home page.html">Back</a>
+        <a href="index.html">Back</a>
         </head>
 
     <div class="grid"></div>
