--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
     <div class= "grid">
         <header class= "header demo">Calypso Ave</header>
-        <div class= "demo1">
+        <div class= "demo1"></div>
+        <div class="box">
             <img src="main page img1.jpg"style="width=250px;height=100px"></div>
         </div> 
         <div class= "demo2">Yarel Fernández Negrón,<br>
