--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <a href="Gallerypage.html">Gallery</a>
         <a href="Aboutpage.html">About</a>
         <a href="Makeitlast.html">Make it last</a>
+        <a href="https://instagram.com/calypso.ave?igshid=1fzt3tgh25afn">Visit our Instagram</a>
     </nav>
 
     <div class= "grid">
