--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <link rel="stylesheet" href="home page.css">
     </head>
 
-    <nav class= "Calypso ave">
+    <nav class= "Box1">
         <a href="Gallerypage.html">Gallery</a>
         <a href="Aboutpage.html">About</a>
-        <a href="Makeitlast.html">Make it last</a>
-        <a href="https://instagram.com/calypso.ave?igshid=1fzt3tgh25afn">Visit our Instagram</a>
+        <a href="Makeitlast.html">Tips</a>
+        <a href="https://instagram.com/calypso.ave?igshid=1fzt3tgh25afn">Instagram-Page</a>
     </nav>
 
     <div class= "grid">
