--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
         <link rel="stylesheet" href="home page.css">
     </head>
 
-    <nav class= "Box1">
-        <a href="Gallerypage.html">Gallery</a>
-        <a href="Aboutpage.html">About</a>
-        <a href="Makeitlast.html">Tips</a>
-        <a href="https://instagram.com/calypso.ave?igshid=1fzt3tgh25afn">Instagram-Page</a>
-    </nav>
+   
 
     <div class= "grid">
-        <header class= "header demo">Calypso Ave</header>
+        <header class= "header demo">Calypso Ave
+            <nav class= "Box1">
+                <a href="Gallerypage.html">Gallery</a>
+                <a href="Aboutpage.html">About</a>
+                <a href="Makeitlast.html">Tips</a>
+                <a href="https://instagram.com/calypso.ave?igshid=1fzt3tgh25afn">Instagram-Page</a></nav></header>
         <div class= "demo1"></div>
         <div class="box">
             <img src="main page img1.jpg"style="width=250px;height=100px"></div>
