--- a/Aboutpage.html
+++ b/Aboutpage.html
@@ -11,20 +11,20 @@
 <div class="grid">
     <header class="header demo">Yarel Fernández Negrón</header>
     <aside class="demo1"></aside>
-    <p class="demo2">My name is Yarel Fernández Negrón and I am a Puerto Rican<br>
-        woman with a lot of passion in my heart. When Im not at<br>
-        school studying at La escuela de Artes  de  Plásticas I<br>
-        like to read, dance and go to my beautiful islands beaches.<br>
-        My passion for art, education and all beautiful things has<br>
-        lead me on a path of self discovery that has made me more<br>
-        sensible of my surroundings, my spirituality and my<br>
-        emotions. Along that path is where Calypso Avenue was<br>
-        created.The main goal of Calypso Ave  is to incorporate<br>
-        my art in everyday-wear with beautiful, non-tarnishing,<br>
-        handmade jewelry with meaning, purpose, and good vibes.<br> 
-        Calypsos avenue’s intentions is to make your inner beauty <br>
-        shine and to complement and protect your aura with beautiful<br> 
-        semi-precious stones. Calypso Avenue is more than just<br>
+    <p class="demo2">My name is Yarel Fernández Negrón and I am a Puerto Rican
+        woman with a lot of passion in my heart. When Im not at
+        school studying at La escuela de Artes  de  Plásticas I
+        like to read, dance and go to my beautiful islands beaches.
+        My passion for art, education and all beautiful things has
+        lead me on a path of self discovery that has made me more
+        sensible of my surroundings, my spirituality and my
+        emotions. Along that path is where Calypso Avenue was
+        created.The main goal of Calypso Ave  is to incorporate
+        my art in everyday-wear with beautiful, non-tarnishing,
+        handmade jewelry with meaning, purpose, and good vibes.
+        Calypsos avenue’s intentions is to make your inner beauty 
+        shine and to complement and protect your aura with beautiful
+        semi-precious stones. Calypso Avenue is more than just
         jewelry, is passion, and attitude, magic and art.</p>
     <aside class="demo3"></aside>
     <img src="Yarel picture (3).jpeg" style= width:825px;height:580px></img>
