--- a/Aboutpage.html
+++ b/Aboutpage.html
@@ -4,7 +4,7 @@
         <meta name= "viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="About page.css">
     
-        <nav class= "box1"></nav>
+        <nav class= "box"></nav>
         <a href="index.html">Back</a>
         </head>
 
@@ -27,7 +27,7 @@
         semi-precious stones. Calypso Avenue is more than just
         jewelry, is passion, and attitude, magic and art.</p>
     <aside class="demo3"></aside>
-    <img src="Yarel picture (3).jpeg" style= width:748px;height:580px></img>
+    <img src="Yarel picture (3).jpeg" style= width:757px;height:580px></img>
     <footer class= "footer"> Calypso Ave Founder</footer>
 
 
