--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
                 <a href="Aboutpage.html">About</a>
                 <a href="Makeitlast.html">Tips</a>
                 <a href="https://instagram.com/calypso.ave?igshid=1fzt3tgh25afn">Instagram-Page</a></nav></header>
-        <div class= "demo1"></div>
+        <aside class= "demo1"></aside>
         <div class="box">
             <img src="main page img1.jpg"style="width=250px;height=100px"></div>
-        </div> 
-        <div class= "demo2">Yarel Fernández Negrón,<br>
+         
+        <aside class= "demo2">Yarel Fernández Negrón,<br>
                         creator and founder of<br>
                         Calypso Ave. Here we will<br>
                         found  some care tips<br>
                         for you to make your<br>
                         jewelry last and some<br>
-                        Calypso's latest work.</div>
+                        Calypso's latest work.</aside>
         </div>
         </html>
         
