--- a/Aboutpage.html
+++ b/Aboutpage.html
@@ -4,8 +4,12 @@
         <meta name= "viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="About page.css">
     
-        <nav class= "box"></nav>
-        <a href="index.html">Back</a>
+        <nav class= "box">
+        <a href="index.html">Back-home</a>
+        <a href="Makeitlast.html">Tips</a>
+        <a href="Gallerypage.html">Gallery</a>
+
+        </nav>
         </head>
 
 <div class="grid">
