--- a/Makeitlast.html
+++ b/Makeitlast.html
@@ -3,9 +3,12 @@
     <head>
         <meta name= "viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="Make it last.css">
-        <nav class= "Calypso ave"></nav>
-        <a href="index.html">Back</a>
-        
+
+        <nav class= "box">
+        <a href="index.html">Back-home</a>
+        <a href="Gallerypage.html">Gallery</a>
+        <a href="Aboutpage.html">About</a>
+    </nav>  
     </head>
 
 <div class="grid">
