--- a/Gallerypage.html
+++ b/Gallerypage.html
@@ -14,13 +14,13 @@
         <header class= "header demo">Calypso Ave latest works</header>
         
         <div class="grid">
-                  <img src="picture1.jpeg"style="width:300px;height:250">
+                  <img src="picture1.jpeg"style="width:300px;height:250"></div>
                   <h1>Sun Earings</h1>
                   <p>Made with opalite, citrine amethyst and clear quartz.
                     Powerful citrine and calming amethyst, perfect combination to enhance
                     your inner shine.</p>
               
-                  <img src="picture2.jpeg" style="width:300px;height:250">
+                  <img src="picture2.jpeg" style="width:300px;height:250"></div>
                   <h1>Evil eye earings</h1>
                   <p>Amethyst and orange Jade made the perfect combination
                     for beauty and tranquility</p>
