--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
                 <a href="Gallerypage.html">Gallery</a>
                 <a href="Aboutpage.html">About</a>
                 <a href="Makeitlast.html">Tips</a>
-                <a href="https://instagram.com/calypso.ave?igshid=1fzt3tgh25afn">Instagram-Page</a></nav></header>
+                <a href="https://instagram.com/calypso.ave?igshid=1fzt3tgh25afn">Instagram-Page</a>
+            </nav>
+            </header>
         <aside class= "demo1"></aside>
         <div class="box">
-            <img src="main page img1.jpg"style="width=250px;height=100px"></div>
-         
+            <img src="main page img1.jpg"style="width=250px;height=100px">
+        </div> 
         <aside class= "demo2">Yarel Fernández Negrón,<br>
                         creator and founder of<br>
                         Calypso Ave. Here we will<br>
