--- a/Makeitlast.html
+++ b/Makeitlast.html
@@ -25,3 +25,4 @@
     <h4 class="h3">Care tip #3: Don't submerge in water<br>(some crystals react to water).</h4>
     <h5 class="h3">Care tip #4: Store in a dry space.</h5>
 </div>
+</html>
