--- a/Gallerypage.html
+++ b/Gallerypage.html
@@ -8,6 +8,7 @@
         <a href="index.html">Back-home</a>
         <a href="Makeitlast.html">Tips</a>
         <a href="Aboutpage.html">About</a>
+        <a href="https://instagram.com/calypso.ave?igshid=1fzt3tgh25afn">Instagram-Page</a>
         </nav>
         </head>
 
