--- a/Aboutpage.html
+++ b/Aboutpage.html
@@ -8,6 +8,7 @@
         <a href="index.html">Back-home</a>
         <a href="Makeitlast.html">Tips</a>
         <a href="Gallerypage.html">Gallery</a>
+        <a href="https://instagram.com/calypso.ave?igshid=1fzt3tgh25afn">Instagram-Page</a>
 
         </nav>
         </head>
@@ -31,7 +32,7 @@
         semi-precious stones. Calypso Avenue is more than just
         jewelry, is passion, and attitude, magic and art.</p>
     <aside class="demo3"></aside>
-    <img src="Yarel picture (3).jpeg" style= width:757px;height:580px></img>
+    <img src="Yarel picture (3).jpeg" style= width:100%;height:100%></img>
     <footer class= "footer"> Calypso Ave Founder</footer>
 
 
